# kubef

./: .gitignore  Cargo.toml  Makefile.ci.toml  Makefile.local.toml  Makefile.toml  README.md  build.rs  config.json  default.nix  devbox.json  devenv.nix  flake.nix  kubef.json  kubef.yaml
.github/workflows/: ci.yaml  nix.yaml  release.yaml
.zed/: settings.json
schemas/: schema.json
src/: main.rs
src/cli/: forward.rs  mod.rs  proxy.rs
src/cnf/: mod.rs  schema.rs
src/dns/: mod.rs
src/env/: mod.rs
src/fwd/: clients.rs  forwarder.rs  forwarding_request.rs  listener.rs  mod.rs  proxy.rs  sockets.rs  tls.rs  watcher.rs
