[package]
name = "kubef"
version = "1.3.0"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/marcocondrache/kubef"
repository = "https://github.com/marcocondrache/kubef"
categories = ["networking", "k8s", "kubernetes"]
authors = [
    "Marco Mihai Condrache <52580954+marcocondrache@users.noreply.github.com>",
]

[dependencies]
futures-lite = "2.6.1"
either = "1.15.0"
tracing = "0.1.41"
schemars = "1.0.4"
anyhow = "1.0.99"
xdg = "3.0.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_yml = { version = "0.0.12" }
clap = { version = "4.5.46", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = [
    "runtime",
    "ws",
    "gzip",
    "unstable-runtime",
] }

[build-dependencies]
schemars = "1.0.4"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
