[package]
name = "kubef"
version = "1.3.1"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/marcocondrache/kubef"
repository = "https://github.com/marcocondrache/kubef"
categories = ["networking", "k8s", "kubernetes"]
authors = [
    "Marco Mihai Condrache <52580954+marcocondrache@users.noreply.github.com>",
]

[dependencies]
hickory-server = "0.25.2"
futures-lite = "2.6.1"
either = "1.15.0"
dashmap = "6.1.0"
tracing = "0.1.41"
schemars = "1.0.4"
anyhow = "1.0.99"
xdg = "3.0.0"

ipnet = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = { version = "0.0.12" }
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.0", features = [
    "runtime",
    "ws",
    "gzip",
    "unstable-runtime",
] }

[build-dependencies]
schemars = "1.0.4"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
ipnet = { version = "2.11.0", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
